# titsa-bot

./: README.md  bot.py  pyproject.toml  titsa.py
tests/: test_bot.py  test_titsa.py
titsa_bot/: bot.py  titsa.py
