[tool.poetry]
name = "titsa-bot"
version = "0.1.0"
description = "Telegram bot to get TITSA buses information"
authors = ["Sergio Sanchez <barraquito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bottle = "^0.12.25"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
isort = "^5.12"

[tool.isort]
profile = "black"
combine_as_imports = "True"
include_trailing_comma = "True"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
